--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,6 +1,6 @@
-@charset "UTF-8";
-/* CSS Document */
-body { 
-padding: 10px;
-margin: 0px;
-}
+@import "normalize.css";
+@import "base/_global";
+@import "base/_variables";
+@import "base/_mixins";
+@import "modules/_large-hero";
+@import "modules/_btn";
